--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-flash": "0.0.2",
+    "express-session": "^1.15.6",
     "moment": "^2.22.2",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.7",
