--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "config": "^2.0.1",
     "connect-flash": "^0.1.1",
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
@@ -19,10 +20,12 @@
     "moment": "^2.22.2",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.7",
+    "morgan": "^1.9.1",
     "nodemon": "^1.18.3",
     "normalize.css": "^8.0.0"
   },
   "devDependencies": {
+    "debug": "^4.1.0",
     "supervisor": "^0.12.0"
   }
 }
