--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.11.0",
     "config": "^2.0.1",
     "connect-flash": "^0.1.1",
     "dotenv": "^6.0.0",
@@ -21,8 +22,12 @@
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.7",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "nodemon": "^1.18.3",
-    "normalize.css": "^8.0.0"
+    "normalize.css": "^8.0.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1"
   },
   "devDependencies": {
     "debug": "^4.1.0",
