--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.3",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
+    "mapbox-gl": "^0.51.0",
     "moment": "^2.22.2",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.7",
