--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Bartlomiej Figatowski",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/mapbox-gl-directions": "^3.1.3",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.11.0",
     "config": "^2.0.1",
