--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@mapbox/mapbox-gl-directions": "^3.1.3",
+    "@mapbox/mapbox-sdk": "^0.4.1",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.11.0",
     "config": "^2.0.1",
