--- a/package.json
+++ b/package.json
@@ -10,19 +10,25 @@
   "license": "ISC",
   "dependencies": {
     "@mapbox/mapbox-gl-directions": "^3.1.3",
+    "@mapbox/mapbox-sdk": "^0.4.1",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.11.0",
     "config": "^2.0.1",
     "connect-flash": "^0.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^6.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-flash": "0.0.2",
+    "express-paginate": "^1.0.0",
     "express-session": "^1.15.6",
     "mapbox-gl": "^0.51.0",
+    "method-override": "^3.0.0",
     "moment": "^2.22.2",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.7",
+    "mongoose-paginate": "^5.0.3",
+    "mongoose-paginate-v2": "^1.0.13",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "nodemon": "^1.18.3",
