--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mapbox/mapbox-gl-directions": "^3.1.3",
     "@mapbox/mapbox-sdk": "^0.4.1",
+    "@sendgrid/mail": "^6.3.1",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.11.0",
     "config": "^2.0.1",
@@ -22,6 +23,7 @@
     "express-flash": "0.0.2",
     "express-paginate": "^1.0.0",
     "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.4.0",
     "mapbox-gl": "^0.51.0",
     "method-override": "^3.0.0",
     "moment": "^2.22.2",
@@ -31,11 +33,14 @@
     "mongoose-paginate-v2": "^1.0.13",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "nodemailer": "^4.7.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^1.18.3",
     "normalize.css": "^8.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1"
+    "passport-local-mongoose": "^5.0.1",
+    "superagent": "^4.0.0"
   },
   "devDependencies": {
     "debug": "^4.1.0",
