--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "mongoose-paginate-v2": "^1.0.13",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "nodemailer": "^4.7.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^1.18.9",
     "normalize.css": "^8.0.0",
     "passport": "^0.4.0",
