--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "mongoose-paginate-v2": "^1.0.13",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
-    "nodemon": "^1.18.3",
+    "nodemon": "^1.18.9",
     "normalize.css": "^8.0.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^5.0.1"
+    "passport-local-mongoose": "^5.0.1",
+    "photoswipe": "^4.1.2"
   },
   "devDependencies": {
     "debug": "^4.1.0",
